--- a/committees.html
+++ b/committees.html
@@ -111,65 +111,278 @@
             <tbody>
                 <tr>
                     <th scope="row">1</th>
+                    <td>Dr. S.Ramachandram</td>
+                    <td>Rtd Vice Chancellor, OU</td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>Dr. Ravindra S Hegadi</td>
+                    <td>Professor, PAH Solapur University</td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td>Dr. Rajendra Hegadi</td>
+                    <td>Associate Professor, IIIT Dharwad</td>
+                </tr>
+                <tr>
+                    <th scope="row">4</th>
+                    <td>Dr. S. P. Algur</td>
+                    <td>Professor & Chairman, CSED, Rani Chennamma Univerisyt, Belgavi</td>
+                </tr>
+                <tr>
+                    <th scope="row">5</th>
+                    <td>Dr. P. Radha Krishna</td>
+                    <td>Professor, CSED, NIT Warangal</td>
+                </tr>
+                <tr>
+                    <th scope="row">6</th>
+                    <td>Dr. M. M. Gore</td>
+                    <td>Professor, MNNIT, Allahabad</td>
+                </tr>
+                <tr>
+                    <th scope="row">7</th>
+                    <td>Dr. Sourav Mukhopadhyay</td>
+                    <td>Associate Professor, IIT Kharaghpur</td>
+                </tr>
+                <tr>
+                    <th scope="row">8</th>
+                    <td>Dr. K Krishna Mohan</td>
+                    <td>Professor, IIT Hyderabad</td>
+                </tr>
+                <tr>
+                    <th scope="row">9</th>
+                    <td>Dr. S M Hegde</td>
+                    <td>Professor, NIT Surathakal</td>
+                </tr>
+                <tr>
+                    <th scope="row">10</th>
+                    <td>Dr. Siba K Udgata</td>
+                    <td>Professor, HCU</td>
+                </tr>
+                <tr>
+                    <th scope="row">11</th>
+                    <td>Dr. Bapi Raju S</td>
+                    <td>Professor, IIIT Hyderabad</td>
+                </tr>
+                <tr>
+                    <th scope="row">12</th>
+                    <td>Dr. Kamalakar Karlapalem</td>
+                    <td>Professor, IIIT Hyderabad</td>
+                </tr>
+                <tr>
+                    <th scope="row">13</th>
                     <td>Dr. Banshidhar Majhi</td>
                     <td>Professor, NIT Rourkela</td>
                 </tr>
                 <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
+                    <th scope="row">14</th>
+                    <td>Dr. K Shyamala</td>
+                    <td>Professor, OU</td>
                 </tr>
                 <tr>
-                    <th scope="row">3</th>
-                    <td>Larry</td>
-                    <td>the Bird</td>
+                    <th scope="row">15</th>
+                    <td>Dr. Naveen Sivadasan</td>
+                    <td>TCS Innovation Labs, Hyderabad</td>
                 </tr>
-            </tbody>
+                <tr>
+                    <th scope="row">16</th>
+                    <td>Dr. Badrinath  G Srinivas</td>
+                    <td>Research Scientist - III, Amazon Development Center, Hyderabad</td>
+                </tr>
+                            </tbody>
         </table>
 
         <br />
 
-        <h1>Organizing Committee</h1>
+        <h1>Technical Programme Committee</h1>
         <br />
         <table class="table table-striped">
             <h2 style="text-align: center;">Conveners</h2>
             <tbody>
                 <tr>
                     <th scope="row">1</th>
-                    <td>Dr. Banshidhar Majhi</td>
-                    <td>Professor, NIT Rourkela</td>
+                    <td>Dr. T. Adilakshmi</td>
+                    <td>Professor & HOD, CSE, VCE</td>
                 </tr>
                 <tr>
                     <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
+                    <td>Dr. Nagaratna P. Hegde</td>
+                    <td>Professor, CSED, VCE</td>
                 </tr>
                 <tr>
                     <th scope="row">3</th>
-                    <td>Larry</td>
-                    <td>the Bird</td>
+                    <td>Dr. V. Sireesha</td>
+                    <td>Assistant Professor, CSED, VCE</td>
+                </tr>
+                <tr>
+                    <th scope="row">4</th>
+                    <td>Dr. P.V.Sudha</td>
+                    <td>Associate Professor, OU</td>
+                </tr>                
+                <tr>
+                    <th scope="row">5</th>
+                    <td>Dr. M.A.Hameed</td>
+                    <td>Assistant Professor, OU</td>
+                </tr>                
+                <tr>
+                    <th scope="row">6</th>
+                    <td>Dr. Phani Kumar</td>
+                    <td>HOD, CSE, Gitam University</td>
+                </tr>                
+                <tr>
+                    <th scope="row">7</th>
+                    <td>Dr.B.Sujatha</td>
+                    <td>Assistant Professor, CSED, OU</td>
+                </tr>                
+                <tr>
+                    <th scope="row">8</th>
+                    <td>Dr.Shashidhar G Koolagudi</td>
+                    <td>Associate Professor, CSED, NITK</td>
+                </tr>                
+                <tr>
+                    <th scope="row">10</th>
+                    <td>Dr.R.Gururaj</td>
+                    <td>Associate Professor, BITS Hyderabad</td>
                 </tr>
             </tbody>
         </table>
 
         <br />
         <table class="table table-striped">
-            <h2 style="text-align: center;">Coordinators</h2>
+            <h2 style="text-align: center;">Organizing Committee</h2>
             <tbody>
                 <tr>
                     <th scope="row">1</th>
-                    <td>Dr. Banshidhar Majhi</td>
-                    <td>Professor, NIT Rourkela</td>
+                    <td>Dr. T. Adilakshmi</td>
+                    <td>Professor & HOD, CSE, VCE</td>
                 </tr>
                 <tr>
                     <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
+                    <td>Dr. Nagaratna P. Hegde</td>
+                    <td>Professor, CSED, VCE</td>
                 </tr>
                 <tr>
                     <th scope="row">3</th>
-                    <td>Larry</td>
-                    <td>the Bird</td>
+                    <td>Dr. V. Sireesha</td>
+                    <td>Assistant Professor, CSED, VCE</td>
+                </tr>
+                <tr>
+                    <th scope="row">4</th>
+                    <td>S. Vinay Kumar</td>
+                    <td>Assistant Professor, CSED, VCE</td>
+                </tr>
+                <tr>
+                    <th scope="row">5</th>
+                    <td>MSV. Sashi Kumar</td>
+                    <td>Assistant Professor, CSED, VCE</td>
+                </tr>
+                <tr>
+                    <th scope="row">6</th>
+                    <td>M. Sunitha Reddy</td>
+                    <td>Assistant Professor, CSED, VCE</td>
+                </tr>
+                <tr>
+                    <th scope="row">7</th>
+                    <td>R. Sateesh Kumar</td>
+                    <td>Assistant Professor, CSED, VCE</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <table class="table table-striped">
+            <h2 style="text-align: center;">Publication Committee</h2>
+            <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Dr. T. Adilakshmi</td>
+                    <td>Professor & HOD, CSE, VCE</td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>Dr. Nagaratna P. Hegde</td>
+                    <td>Professor, CSED, VCE</td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td>MSV. Sashi Kumar</td>
+                    <td>Assistant Professor, CSED, VCE</td>
+                </tr>
+                <tr>
+                    <th scope="row">4</th>
+                    <td>S. Vinay Kumar</td>
+                    <td>Assistant Professor, CSED, VCE</td>
+                </tr>
+                <tr>
+                    <th scope="row">5</th>
+                    <td>Dr. V. Sireesha</td>
+                    <td>Assistant Professor, CSED, VCE</td>
+                </tr>                
+            </tbody>
+        </table>
+
+        <table class="table table-striped">
+            <h2 style="text-align: center;">Publicity Committee</h2>
+            <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Dr. Nagaratna P. Hegde</td>
+                    <td>Professor, CSED, VCE</td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>M. Sunitha Reddy</td>
+                    <td>Assistant Professor, CSED, VCE</td>
+                </tr>
+
+                <tr>
+                    <th scope="row">3</th>
+                    <td>MSV. Sashi Kumar</td>
+                    <td>Assistant Professor, CSED, VCE</td>
+                </tr>
+                <tr>
+                    <th scope="row">4</th>
+                    <td>S. Vinay Kumar</td>
+                    <td>Assistant Professor, CSED, VCE</td>
+                </tr>
+                <tr>
+                    <th scope="row">5</th>
+                    <td>I. Navakanth</td>
+                    <td>Assistant Professor, CSED, VCE</td>
+                </tr>
+                <tr>
+                    <th scope="row">6</th>
+                    <td>C. Gireesh</td>
+                    <td>Assistant Professor, CSED, VCE</td>
+                </tr>             
+                <tr>
+                    <th scope="row">7</th>
+                    <td>T. Jalaja</td>
+                    <td>Assistant Professor, CSED, VCE</td>
+                </tr>   
+                <tr>
+                    <th scope="row">8</th>
+                    <td>I. Navakanth</td>
+                    <td>Assistant Professor, CSED, VCE</td>
+                </tr>
+                <tr>
+                    <th scope="row">9</th>
+                    <td>S. Komal Kaur</td>
+                    <td>Assistant Professor, CSED, VCE</td>
+                </tr>
+                <tr>
+                    <th scope="row">10</th>
+                    <td>T. Saikanth</td>
+                    <td>Assistant Professor, CSED, VCE</td>
+                </tr>
+                <tr>
+                    <th scope="row">11</th>
+                    <td>K. Mamatha</td>
+                    <td>Assistant Professor, CSED, VCE</td>
+                </tr>
+                <tr>
+                    <th scope="row">12</th>
+                    <td>G. Sridhar</td>
+                    <td>Lab Programmer, CSED, VCE</td>
                 </tr>
             </tbody>
         </table>
