--- a/contact.html
+++ b/contact.html
@@ -113,38 +113,41 @@
     <!--================Contact Area =================-->
     <section class="contact_area p_120">
         <div class="container">
-            <!--================Start Event Map Area =================-->
-            <section class="home_map_area iframe-container">
-                <!-- <div id="mapBox2" class="mapBox2" data-lat="17.3805282" data-lon="78.3826143" data-zoom="13"
-			data-info="Vasavi College of Engineering, Hyderabad, Telangana, India" data-mlat="17.3805282"
-			data-mlon="78.3826143">
-		</div> -->
-                <iframe id="mapIframe" onload=""
-                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15230.603210403495!2d78.3826143!3d17.3805282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5c30ca8d2ffb8734!2sVasavi%20College%20of%20Engineering!5e0!3m2!1sen!2sin!4v1574527933482!5m2!1sen!2sin"
-                    allowfullscreen=""></iframe>
-            </section><br>
-            <!--================End Event Map Area =================-->
             <div class="row">
                 <div class="col-lg-3">
                     <div class="contact_info">
                         <div class="info_item">
                             <i class="lnr lnr-home"></i>
-                            <h6>Vasavi College of Engineering</h6>
+                            <h6>S Vinay Kumar</h6>
+                            <h5>+91 9866 171 252</h5>
+                            <h5>Vasavi College of Engineering</h5>
                             <p>Hyderabad, India</p>
                         </div>
                         <div class="info_item">
                             <i class="lnr lnr-phone-handset"></i>
-                            <h6><a href="#">+91 40 23146003</a></h6>
-                            <p>Mon to Sat 10am to 4 pm</p>
+                            <h6><a href="#">+91 40 23146020</a></h6>
+                            <p>Mon to Sat 9:30am to 5:30pm</p>
                         </div>
                         <div class="info_item">
                             <i class="lnr lnr-envelope"></i>
-                            <h6><a href="mailto:support@vce.ac.in">support@vce.ac.in</a></h6>
+                            <h6><a href="mailto:confcse@gmail.com">EMAIL US</a></h6>
                             <p>Send us your query anytime!</p>
                         </div>
                     </div>
                 </div>
             </div>
+
+                    <!--================Start Event Map Area =================-->
+                    <section class="home_map_area iframe-container">
+                        <!-- <div id="mapBox2" class="mapBox2" data-lat="17.3805282" data-lon="78.3826143" data-zoom="13"
+                    data-info="Vasavi College of Engineering, Hyderabad, Telangana, India" data-mlat="17.3805282"
+                    data-mlon="78.3826143">
+                </div> -->
+                        <iframe id="mapIframe" onload=""
+                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15230.603210403495!2d78.3826143!3d17.3805282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5c30ca8d2ffb8734!2sVasavi%20College%20of%20Engineering!5e0!3m2!1sen!2sin!4v1574527933482!5m2!1sen!2sin"
+                            allowfullscreen=""></iframe>
+                    </section><br>
+                    <!--================End Event Map Area =================-->
     </section>
     <!--================Contact Area =================-->
 
@@ -157,22 +160,21 @@
                     <div class="single-footer-widget tp_widgets">
                         <h6 class="footer_title">Contact Us</h6>
                         Vasavi College of Engineering<br />
-                        <em><small> (Private Un-aided Non-minority
-                                Autonomous Institution)<br /></small></em>
-                        Affiliated to Osmania University, Hyderabad <br />
-                        Approved by AICTE, New Delhi<br />
+                        <em><small> (Autonomous)<br /></small></em>
+                        <p>Affiliated to Osmania University, Hyderabad </p> 
+                        <br/>Approved by AICTE, New Delhi<br />
                         9-5-81, Ibrahimbagh<br />
                         Hyderabad - 500 031<br />
                         Telangana, India<br /><br />
 
-                        Tel: +91 40 23146003<br />
-                        Fax: +91 40 23146090<br /> <br />
+                        Tel: +91 40 23146020<br />
+                        Tel: +91 40 23146021<br /> <br />
 
                         <!-- <a
 							   href="/cdn-cgi/l/email-protection#f18183989f929881909db1879294df9092df989f"><span
 								   class="__cf_email__"
 								   data-cfemail="4b3b39222528223b2a270b383f2a2d2d653d282e652a28652225">[email&#160;protected]</span></a><br /> -->
-                        Email: <a href="mailto:principal@vce.ac.in">principal@vce.ac.in</a>
+                        Email: <a href="mailto:confcse@gmail.com">Conference Team</a>
                     </div>
                 </div>
 
