--- a/index.html
+++ b/index.html
@@ -114,9 +114,8 @@
 				<div class="row">
 					<div class="col-lg-6">
 						<div class="event_text">
-							<h3>Event will Start in</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-								incididunt ut labore.</p>
+							<h3>Abstract Submission deadline</h3>
+							<p>Send your registration within </p>
 						</div>
 					</div>
 					<div class="col-lg-6">
