--- a/register.html
+++ b/register.html
@@ -129,9 +129,8 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="event_text">
-                            <h3>Next Event will Start in</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                incididunt ut labore.</p>
+                            <h3>Abstract of the Paper Deadline</h3>
+                            <p>Send the abstract of the paper within the  </p>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -162,17 +161,13 @@
     </section>
     <!--================End Event Time Area =================-->
 
-
-
-
     <!--================Start Pricing Area =================-->
 
 
     <section class="price_area p_120">
         <div class="container">
             <div class="main_title">
-                <h2>Registration Fee </h2>
-                <p>Some Awsome Text.</p>
+                <h2>Registration Fee </h2>                
             </div>
             <div class="price_inner row m0">
                 <div class="col-lg-3 col-sm-6 p0">
@@ -180,16 +175,16 @@
                         <div class="price_text">
                             <h3>Industry</h3>
                             <h5>Entreprenuers/Freelancers</h5>
-                            <h2>₹1000</h2>
+                            <h2>₹9000</h2>
                             <ul class="list">
-                                <li><a href="#">RAM 1 GB</a></li>
-                                <li><a href="#">Core CPU 1</a></li>
-                                <li><a href="#">SSD Storage 20 GB</a></li>
-                                <li><a href="#">Transfer 1 TB</a></li>
-                                <li><a href="#">Network In 40 Gb</a></li>
+                                <li><a href="#">Rs. 1500 for every extra page</a></li>
+                                <li><a href="#">Conference Kit</a></li>
+                                <li><a href="#">Lunch</a></li>
+                                <li><a href="#">Tea & Snacks</a></li>
+                                <li><a href="#">e-Proceedings</a></li>                                
                             </ul>
                         </div>
-                        <a class="price_btn" href="#">Get Started</a>
+                        <a class="price_btn" href="#">Register Now</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6 p0">
@@ -197,50 +192,49 @@
                         <div class="price_text">
                             <h3>Academica</h3>
                             <h5>Proferssors</h5>
-                            <h2>₹750</h2>
+                            <h2>₹8000</h2>
                             <ul class="list">
-                                <li><a href="#">RAM 2 GB</a></li>
-                                <li><a href="#">Core CPU 2</a></li>
-                                <li><a href="#">SSD Storage 50 GB</a></li>
-                                <li><a href="#">Transfer 1 TB</a></li>
-                                <li><a href="#">Network In 40 Gb</a></li>
+                                <li><a href="#">Rs. 1500 for every extra page</a></li>
+                                <li><a href="#">Conference Kit</a></li>
+                                <li><a href="#">Lunch</a></li>
+                                <li><a href="#">Tea & Snacks</a></li>
+                                <li><a href="#">e-Proceedings</a></li>                                
                             </ul>
                         </div>
-                        <a class="price_btn" href="#">Get Started</a>
+                        <a class="price_btn" href="#">Register Now</a>                    
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6 p0">
                     <div class="price_item">
                         <div class="price_text">
-                            <h3>Students</h3>
-                            <h5>Unversity</h5>
-                            <h2>₹500</h2>
+                            <h3>Participants</h3>
+                            <h5>Attendees without a Conference Paper</h5>
+                            <h2>₹3500</h2>
                             <ul class="list">
-                                <li><a href="#">RAM 4 GB</a></li>
-                                <li><a href="#">Core CPU 4</a></li>
-                                <li><a href="#">SSD Storage 75 GB</a></li>
-                                <li><a href="#">Transfer 2 TB</a></li>
-                                <li><a href="#">Network In 80 Gb</a></li>
+                                <li><a href="#">Conference Kit</a></li>
+                                <li><a href="#">Lunch</a></li>
+                                <li><a href="#">Tea & Snacks</a></li>
+                                <li><a href="#">e-Proceedings</a></li> 
                             </ul>
                         </div>
-                        <a class="price_btn" href="#">Get Started</a>
+                        <a class="price_btn" href="#">Register Now</a>                    
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6 p0">
                     <div class="price_item">
                         <div class="price_text">
-                            <h3>CSI Members</h3>
-                            <h5>Student CHapter</h5>
-                            <h2>₹500</h2>
+                            <h3>International Authors</h3>
+                            <h5>Outside India</h5>
+                            <h2>$300</h2>
                             <ul class="list">
-                                <li><a href="#">RAM 8 GB</a></li>
-                                <li><a href="#">Core CPU 8</a></li>
-                                <li><a href="#">SSD Storage 100 GB</a></li>
-                                <li><a href="#">Transfer 2 TB</a></li>
-                                <li><a href="#">Network In 100 Gb</a></li>
+                                <li><a href="#">$50 for every extra page</a></li>
+                                <li><a href="#">Conference Kit</a></li>
+                                <li><a href="#">Lunch</a></li>
+                                <li><a href="#">Tea & Snacks</a></li>
+                                <li><a href="#">e-Proceedings</a></li> 
                             </ul>
                         </div>
-                        <a class="price_btn" href="#">Get Started</a>
+                        <a class="price_btn" href="#">Register Now</a>                    
                     </div>
                 </div>
             </div>
@@ -261,11 +255,11 @@
                             <h4 class="mb-20">Bank Details</h4>
                             <p>
                                 <ul class="list">
-                                    <li>Bank</li>
-                                    <li>Acc Name</li>
-                                    <li>Acc No</li>
-                                    <li>IFSC</li>
-                                    <li>Address</li>
+                                    <li>Bank        : Syndicate Bank, VCE</li>
+                                    <li>Acc Name    : S. Vinay Kumar</li>
+                                    <li>Acc No      : 30592180000910</li>
+                                    <li>IFSC        :SYNB0003059</li>
+                                    <li>Address     : Vasavi College of Engineering</li>
                                 </ul>
                             </p>
                         </div>
@@ -284,7 +278,7 @@
                     <div class="col-md-4">
                         <div class="single-defination">
                             <h4 class="mb-20">Paytm</h4>
-                            <p>Payment Mobile no</p>
+                            <p>Payment Mobile no: 9866171252</p>
                         </div>
                     </div>
                 </div>
