--- a/committees.html
+++ b/committees.html
@@ -97,7 +97,21 @@
 
     <!--================Team Area =================-->
     <div class="resp_margin_commt">
-        <h1>Technical Committee</h1>
+        <table class="table table-striped">
+            <tbody>
+                <tr>
+                    <td style="text-align: center;">Sri. P Balaji, CEO, VCE</td>
+                    <td>Chief Patron</td>
+                </tr>
+                <tr>
+                    <td style="text-align: center;">Dr. S. V. Ramana, Principal, VCE</td>
+                    <td>Patron</td>
+                </tr>
+            </tbody>
+        </table>
+
+
+        <h1>Program Committee</h1>
         <br />
         <table class="table table-striped">
             <!-- <thead>
