--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
                     </button>
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
-                        <ul class="nav navbar-nav menu_nav ml-auto">
+                        <ul class="nav navbar-nav menu_nav">
                             <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
                             <!-- <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> -->
                             <li class="nav-item submenu dropdown">
@@ -72,6 +72,7 @@
                             <li class="nav-item"><a class="nav-link" href="accommodation.html">Accommodation</a></li>
                             <li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a></li>
                             <li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
+                            <li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li>
 
 
                             <!-- <li class="nav-item submenu dropdown">
@@ -82,9 +83,9 @@
 								</ul>
 							</li> -->
                         </ul>
-                        <ul class="nav navbar-nav navbar-right">
+                        <!-- <ul class="nav navbar-nav navbar-right">
                             <li class="nav-item"><a href="./register.html" class="tickets_btn">Register</a></li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
             </nav>
