changes dictated by sashi sir

--- a/importantdates.html
+++ b/importantdates.html
@@ -39,8 +39,8 @@
 
 <body>
 
-    <!--================Header Menu Area =================-->
-	<header class="header_area">
+<!--================Header Menu Area =================-->
+<header class="header_area">
 		<div class="main_menu">
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container box_1620">
@@ -109,58 +109,41 @@
                 <div class="banner_content text-center">
                     <div class="page_link">
                         <a href="index.html">Home</a>
-                        <a href="Callforpapers.html">Call for Papers</a>
+                        <a href="importantdates.html">Important Dates and Venue</a>
                     </div>
-                    <h2>Call for Papers</h2>
+                    <h2>Important Dates and Venue</h2>
                 </div>
             </div>
         </div>
     </section>
     <!--================End Home Banner Area =================-->
 
-    <!--================Contact Area =================-->
-    <div class="container" style="margin:50px auto;">
-
-			<h2>Paper submission guidelines/Call for Papers</h2>
-			<p>Authors are invited to submit full papers for
-			 consideration (maximum 10 pages) in SCI 2020.
-			  Submission of paper must be original and should
-			   not have been previously published or under consideration
-				for publication. All papers will be sent for peer review and the corresponding
-				 author will be notified of the outcome of the review process. The proceedings of the conference
-				  will expected to be published by Smart Innovation Systems and Technologies Series,
-				   Springer (Approved). Extended versions of selected best papers will expected to be appear
-					in SCI/Scopus indexed international journals. At least one of the authors of each accepted paper
-					 must register for the conference. All submissions are to be done electronically through easychair link.</p>
-			<ul class="list-group">
-				<li class="list-group-item" style="text-align: center;">Conference Focus Areas</li>	 
-				<li class="list-group-item" style="text-align: center;">Approximate Computing</li>
-				<li class="list-group-item" style="text-align: center;">Computational Intelligence</li>
-				<li class="list-group-item" style="text-align: center;">Cognitive Computing</li>
-				<li class="list-group-item" style="text-align: center;">Intelligent Control Agents</li>
-				<li class="list-group-item" style="text-align: center;">Optimization Techniques</li>
-				<li class="list-group-item" style="text-align: center;">Intelligent Agents</li>
-				<li class="list-group-item" style="text-align: center;">Soft Computing Techniques</li>
-				<li class="list-group-item" style="text-align: center;">Parallel & Scalable Computing</li>
-				<li class="list-group-item" style="text-align: center;">Internet of Things</li>
-				<li class="list-group-item" style="text-align: center;">Cloud & Fog Computing</li>
-				<li class="list-group-item" style="text-align: center;">Mobile Computing & Ad hoc Networks</li>
-				<li class="list-group-item" style="text-align: center;">Security Tools & Technologies</li>
-				<li class="list-group-item" style="text-align: center;">Stream Mining</li>
-				<li class="list-group-item" style="text-align: center;">Social Media</li>
-				<li class="list-group-item" style="text-align: center;">Knowledge - based Systems and Formal Methods</li>
-				<li class="list-group-item" style="text-align: center;">Search Engines and Information Retrieval</li>
-				<li class="list-group-item" style="text-align: center;">Real- time Systems</li>
-				<li class="list-group-item" style="text-align: center;">Real- time Analytics</li>
-				<li class="list-group-item" style="text-align: center;">Autonomous Agents</li>
-				<li class="list-group-item" style="text-align: center;">Security and Information Assurance</li>
-				<li class="list-group-item" style="text-align: center;">Robotics</li>
-				<li class="list-group-item" style="text-align: center;">Robust Control Agents</li>
-				<li class="list-group-item" style="text-align: center;">Big data Tools & Technologies</li>
-				<li class="list-group-item" style="text-align: center;">Recent Trends & Developments in Networking</li>
-			</ul>
-	</div>
-    <!--================Contact Area =================-->
+    <!--================Dates Area =================-->
+    <div class="container" style="text-align: center; margin:50px auto;">
+        <h2>Important Dates and Venue</h2>
+        <table class="table table-borderless">
+            <tbody>
+                <tr>
+                    <td style="text-align: right;">Abstract submission last date:</td>
+                    <td style="text-align: left;">30th March 2020</td>
+                </tr>
+                <tr>
+                    <td style="text-align: right;">Registration fee submission:&nbsp;&nbsp;&nbsp;</td>
+                    <td style="text-align: left;">30th April 2020</td>
+                </tr>
+                <tr>
+                    <td style="text-align: right;">Conference dates: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                    <td style="text-align: left;">5th and 6th June 2020</td>
+                </tr>
+            </tbody>
+        </table>
+        <!-- <b></b> <br/>
+        <b></b> <br/>
+        <b>Conference dates:</b> 5th and  6th  June 2020<br/> -->
+        <h3>Venue: QEEE HALL , VCE</h3><br/>
+    </div>
+    
+    <!--================Dates Area =================-->
 
     <!--================ start footer Area  =================-->
     <footer class="footer-area pad_top pad_btm_50" height="auto">
