--- a/about-us.html
+++ b/about-us.html
@@ -45,7 +45,7 @@
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container box_1620">
 					<!-- Brand and toggle get grouped for better mobile display -->
-
+					
 					<a class="navbar-brand logo_h" href="http://www.vce.ac.in"><img src="img/logo.png" alt=""></a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse"
 						data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -60,28 +60,35 @@
 							<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
 							<!-- <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> -->
 							<li class="nav-item submenu dropdown">
-								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
-									aria-haspopup="true" aria-expanded="false">About</a>
+								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About</a>
 								<ul class="dropdown-menu">
 									<li class="nav-item"><a class="nav-link" href="about-us.html">College</a></li>
 									<li class="nav-item"><a class="nav-link" href="details.html">Event</a></li>
 								</ul>
 							</li>
-							<li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li>
+							<!-- <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li> -->
+							<li class="nav-item"><a class="nav-link" href="importantdates.html">Important Dates & Venue</a></li>
 							<li class="nav-item"><a class="nav-link" href="committees.html">Committees </a></li>
 							<li class="nav-item"><a class="nav-link" href="accommodation.html">Accommodation</a></li>
 							<li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a></li>
 							<li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
-							<li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li>
+							<!-- <li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li> -->
+							<li class="nav-item submenu dropdown">
+								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Register</a>
+								<ul class="dropdown-menu">
+									<li class="nav-item"><a class="nav-link" href="Callforpapers.html">Papers</a></li>
+									<li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
+								</ul>
+							</li>
 
 
 							<!-- <li class="nav-item submenu dropdown">
-									<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About</a>
-									<ul class="dropdown-menu">
-										<li class="nav-item"><a class="nav-link" href="about-us.html">College</a>
-										<li class="nav-item"><a class="nav-link" href="details.html">Event</a>
-									</ul>
-								</li> -->
+								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About</a>
+								<ul class="dropdown-menu">
+									<li class="nav-item"><a class="nav-link" href="about-us.html">College</a>
+									<li class="nav-item"><a class="nav-link" href="details.html">Event</a>
+								</ul>
+							</li> -->
 						</ul>
 						<!-- <ul class="nav navbar-nav navbar-right">
 							<li class="nav-item"><a href="./register.html" class="tickets_btn">Register</a></li>
@@ -92,7 +99,6 @@
 		</div>
 	</header>
 	<!--================Header Menu Area =================-->
-
 	<!--================Home Banner Area =================-->
 	<section class="banner_area">
 		<div class="banner_inner d-flex align-items-center">
