--- a/index.html
+++ b/index.html
@@ -67,12 +67,20 @@
 									<li class="nav-item"><a class="nav-link" href="details.html">Event</a></li>
 								</ul>
 							</li>
-							<li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li>
+							<!-- <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li> -->
+							<li class="nav-item"><a class="nav-link" href="importantdates.html">Important Dates & Venue</a></li>
 							<li class="nav-item"><a class="nav-link" href="committees.html">Committees </a></li>
 							<li class="nav-item"><a class="nav-link" href="accommodation.html">Accommodation</a></li>
 							<li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a></li>
 							<li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
-							<li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li>
+							<!-- <li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li> -->
+							<li class="nav-item submenu dropdown">
+								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Register</a>
+								<ul class="dropdown-menu">
+									<li class="nav-item"><a class="nav-link" href="Callforpapers.html">Papers</a></li>
+									<li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
+								</ul>
+							</li>
 
 
 							<!-- <li class="nav-item submenu dropdown">
